@@ -37,6 +37,9 @@ Trunk (unreleased changes)
 11. HADOOP-1122.  Fix divide-by-zero exception in FSNamesystem
     chooseTarget method.  (Dhruba Borthakur via tomwhite)
 
+12. HADOOP-1131.  Add a closeAll() static method to FileSystem.
+    (Philippe Gassmann via tomwhite)
+
 
 Release 0.12.2 - 2007-23-17
 
